Fix task list on small screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,10 @@
   color: dimgray;
 }
 
+.task-list {
+  margin-bottom: 200px;
+}
+
 .about-link {
   font-size: 1rem;
   color: grey;
